[gd_scene load_steps=47 format=3 uid="uid://bg7areaknvslq"]

[ext_resource type="Texture2D" uid="uid://cwh58otavpose" path="res://v2.1/adventurer-1.3-Sheet.png" id="1_064db"]
[ext_resource type="Script" path="res://Player/Player.gd" id="1_i1cs4"]
[ext_resource type="Texture2D" uid="uid://6memenwljm1r" path="res://Jungle Asset Pack/circle.png" id="3_mm0nd"]
[ext_resource type="PackedScene" uid="uid://cdvxebyys67k3" path="res://DamageBox/damage_box.tscn" id="4_ceiyx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_at6uo"]
radius = 18.0
height = 54.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fp0cc"]
atlas = ExtResource("1_064db")
region = Rect2(0, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n0gn"]
atlas = ExtResource("1_064db")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr32r"]
atlas = ExtResource("1_064db")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tto81"]
atlas = ExtResource("1_064db")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhlpc"]
atlas = ExtResource("1_064db")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tte1i"]
atlas = ExtResource("1_064db")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_utvxp"]
atlas = ExtResource("1_064db")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6it28"]
atlas = ExtResource("1_064db")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uibw2"]
atlas = ExtResource("1_064db")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vwg5"]
atlas = ExtResource("1_064db")
region = Rect2(350, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cngf0"]
atlas = ExtResource("1_064db")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_viafa"]
atlas = ExtResource("1_064db")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj2un"]
atlas = ExtResource("1_064db")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmfer"]
atlas = ExtResource("1_064db")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7o1y"]
atlas = ExtResource("1_064db")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vvkk"]
atlas = ExtResource("1_064db")
region = Rect2(350, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oylax"]
atlas = ExtResource("1_064db")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_h32ti"]
atlas = ExtResource("1_064db")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xkeq"]
atlas = ExtResource("1_064db")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x76x"]
atlas = ExtResource("1_064db")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gftw"]
atlas = ExtResource("1_064db")
region = Rect2(50, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_navt8"]
atlas = ExtResource("1_064db")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ih7m"]
atlas = ExtResource("1_064db")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hglq3"]
atlas = ExtResource("1_064db")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sifcq"]
atlas = ExtResource("1_064db")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxjkj"]
atlas = ExtResource("1_064db")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cma2k"]
atlas = ExtResource("1_064db")
region = Rect2(0, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbg02"]
atlas = ExtResource("1_064db")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5keqa"]
atlas = ExtResource("1_064db")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_un2eu"]
atlas = ExtResource("1_064db")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_11tbo"]
atlas = ExtResource("1_064db")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_urjly"]
atlas = ExtResource("1_064db")
region = Rect2(250, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_jn2ct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp0cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n0gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr32r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tto81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhlpc")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tte1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utvxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6it28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uibw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vwg5")
}],
"loop": false,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cngf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viafa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj2un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmfer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7o1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vvkk")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oylax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h32ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xkeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x76x")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_7gftw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_navt8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4ih7m")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hglq3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sifcq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_rxjkj")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cma2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbg02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5keqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un2eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11tbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urjly")
}],
"loop": false,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_yk5wi"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_6v545"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}

[sub_resource type="Animation" id="Animation_f121v"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_l6p1n"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_ns2yd"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Jump"]
}

[sub_resource type="Animation" id="Animation_10hpf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ewnya"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28bxd"]
_data = {
"Attack": SubResource("Animation_yk5wi"),
"Damage": SubResource("Animation_6v545"),
"Death": SubResource("Animation_f121v"),
"Idle": SubResource("Animation_l6p1n"),
"Jump": SubResource("Animation_ns2yd"),
"RESET": SubResource("Animation_10hpf"),
"Run": SubResource("Animation_ewnya")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_i1cs4")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(9.99998, 7.00002)
scale = Vector2(0.52625, 0.405)
color = Color(1, 1, 0.301961, 1)
texture = ExtResource("3_mm0nd")
texture_scale = 0.55

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.9055, 4)
shape = SubResource("CapsuleShape2D_at6uo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.90552, -2.99997)
scale = Vector2(1.71622, 1.71622)
sprite_frames = SubResource("SpriteFrames_jn2ct")
animation = &"Attack"
frame = 4
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28bxd")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 4)
zoom = Vector2(1.5, 1.5)
limit_left = 20
limit_right = 2300
limit_bottom = 700
position_smoothing_enabled = true
position_smoothing_speed = 3.445

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackDirection" type="Node2D" parent="."]

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("4_ceiyx")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(5, 1)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
position = Vector2(6, 2)
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(-26, 5)
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
